[gd_scene load_steps=5 format=3 uid="uid://b5k6p5k08hhp4"]

[ext_resource type="Texture2D" uid="uid://do0lj04wffcv8" path="res://assets/BS/Blastoise_BS_2.png" id="1_a8tt1"]
[ext_resource type="Script" uid="uid://b2hoqu5cetqfl" path="res://Scenes/DraggableCard.gd" id="1_luse8"]
[ext_resource type="Material" uid="uid://bkobsyo3kkfku" path="res://Resources/card_material.tres" id="2_card_material"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_luse8"]
size = Vector2(100, 140)

[node name="DraggableCard" type="Node2D"]
script = ExtResource("1_luse8")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_card_material")
texture = ExtResource("1_a8tt1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_luse8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
